fix: table spacing on empty table

--- a/style.css
+++ b/style.css
@@ -108,11 +108,12 @@ td {
 .invisible {
   border: none;
   width: 70px;
+  display: block;
 }
 
 .remove {
   color: red;
-  width: 70px;
+  width: 100%;
   height: 25px;
   margin-left: 10px;
 }
